--- a/prueba.html
+++ b/prueba.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mi primera página</title>
+  <title>Mi primer página web</title>
 </head>
 <body>
   <h1>Hola mundo desde GitHub</h1>
+  <h2>Hola desde el mundo mundo GitHub</h2>
 </body>
 </html>
