Cambios en prueba.html con nueva información

--- a/prueba.html
+++ b/prueba.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Hola mundo desde GitHub</h1>
-  <h2>Hola desde el mundo mundo GitHub</h2>
+  <h2>Chau desde el mundo GitHub</h2>
 </body>
 </html>
